product sample for mongodb
